--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -1,29 +1,29 @@
 @font-face
-  font-family: "ElMessiri-Bold"
+  font-family: "ElMessiri"
   src: url("../fonts/ElMessiri-Bold.woff2") format("woff2")
   src: url("../fonts/ElMessiri-Bold.woff") format("woff")
   font-style: normal
   font-weight: 700
 @font-face
-  font-family: "ProximaNova-Light"
+  font-family: "ProximaNova"
   src: url("../fonts/ProximaNova-Light.woff2") format("woff2")
   src: url("../fonts/ProximaNova-Light.woff") format("woff")
   font-style: normal
   font-weight: 300
 @font-face
-  font-family: "ProximaNova-Regular"
+  font-family: "ProximaNova"
   src: url("../fonts/ProximaNova-Regular.woff2") format("woff2")
   src: url("../fonts/ProximaNova-Regular.woff") format("woff")
   font-style: normal
   font-weight: 400
 @font-face
-  font-family: "ProximaNova-Semibold"
+  font-family: "ProximaNova"
   src: url("../fonts/ProximaNova-Semibold.woff2") format("woff2")
   src: url("../fonts/ProximaNova-Semibold.woff") format("woff")
   font-style: normal
   font-weight: 600
 @font-face
-  font-family: "ProximaNova-Bold"
+  font-family: "ProximaNova"
   src: url("../fonts/ProximaNova-Bold.woff2") format("woff2")
   src: url("../fonts/ProximaNova-Bold.woff") format("woff")
   font-style: normal
