--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -2,15 +2,18 @@
 ::before,
 ::after
   box-sizing: border-box
-
 body
-  font-family: "ProximaNova-Light", sans-serif
+  font-family: "ProximaNova", sans-serif
+  font-weight: 300
   font-size: 16px
   background-color: rgba(22, 40, 49, 1)
-  color: #fff
+  color: $white
+ul
+  list-style-type: none
+a
+  text-decoration: none
 
 .container
   max-width: 1346px
   padding: 0 25px
   margin: 0 auto
-  border-radius: $radius
