added sessions section

--- a/sass/_vars.sass
+++ b/sass/_vars.sass
@@ -32,6 +32,7 @@ $transitions: all .30s ease-in-out
     border-radius: 0px 50px
     display: inline-block
     margin-right: 66px
+    transform: translateY(-20%)
   &::after
     content: ''
     width: 28px
@@ -40,3 +41,4 @@ $transitions: all .30s ease-in-out
     border-radius: 50px 0px
     display: inline-block
     margin-left: 66px
+    transform: translateY(-20%)
