--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -1,9 +1,9 @@
-.container
-  display: flex
-  align-items: center
-  justify-content: space-between
 .header
   padding: 30px 0 50px
+  &__container
+    display: flex
+    align-items: center
+    justify-content: space-between
   &__button
     font-weight: 600
     font-size: 13px
