--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,8 @@
 @import 'normalize'
 @import 'vars'
 @import 'fonts'
+@import 'global'
 @import 'settings'
 @import 'sections/header'
 @import 'sections/hero'
+@import 'sections/session'
